--- a/PalansoftWeb/palansoft-interactive/package.json
+++ b/PalansoftWeb/palansoft-interactive/package.json
@@ -1,6 +1,7 @@
 {
   "name": "palansoft-interactive",
-  "version": "0.1.0",
+  "homepage": "http://school.nasharatech.com/",
+  "version": "1.1.0",
   "private": true,
   "proxy": "http://localhost:5000",
   "dependencies": {
